--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
 #myimg {
   width: 5%;
   height: 6%;
-  size: 35%;
+  size: 30%;
   position: fixed;
   margin-top: auto;
 }
@@ -30,7 +30,7 @@ body {
   display: flex;
   width: 100vw;
   justify-content: space-between;
-  padding: 0 2%;
+  padding: 0 15px;
   align-items: center;
 }
 
@@ -46,7 +46,7 @@ body {
   list-style: none;
   width: 50vw;
   align-items: center;
-  padding: 20px;
+  padding: 0.2rem;
   margin-left: -50px;
   font-style: bold;
   font-weight: bolder;
@@ -57,17 +57,20 @@ body {
   color: rgb(255, 241, 206);
   font-size: 1.4em;
   transition: 200ms;
-  padding: 15px;
+  padding: 0.2vw;
   transition: 0.3s;
 }
 
 .navbar li a:hover {
   border: none;
-  color: rgb(255, 116, 116);
+  color: rgb(255, 102, 102);
   text-decoration-line: underline;
   transition: width 1s ease-in-out;
 }
-
+.navbar li a::after {
+  color: rgb(255, 102, 102);
+  text-decoration-line: underline;
+}
 .navbar a::after {
   content: "";
   position: absolute;
@@ -75,7 +78,7 @@ body {
   height: 2px;
   bottom: 0;
   left: 50%;
-  background-color: rgb(255, 124, 124);
+  background-color: white;
   transition: width 0.3s ease-in-out; /* Animation duration and easing function */
 }
 
@@ -175,7 +178,7 @@ img {
 
 #cursor {
   border-left: 2px solid #000;
-  animation: blink 0.9s infinite;
+  animation: blink 0.7s infinite;
   margin-left: 0%;
 }
 
@@ -254,12 +257,12 @@ h2{
 }
 .skill-img{
   width: 90px;
-  position:relative;
+  position: relative;
   height: 90px;
   border-radius: 45px;
   background-color: #fff;
-  justify-items: auto;
-  justify-content: space-evenly;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
