--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body {
 .container {
   display: flex;
   width: 100vw;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0 15px;
   align-items: center;
 }
@@ -38,11 +38,12 @@ body {
   height: 12%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .navbar ul {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   list-style: none;
   width: 50vw;
   align-items: center;
@@ -194,7 +195,7 @@ img {
 
 /*Skills Section*/
 .skill-inner{
-  padding-top: 20px;
+  padding-top: 2px;
 }
 
 .skill-header{
@@ -202,6 +203,9 @@ img {
   color: #fff;
   padding: 1rem;
   position: center;
+}
+.skill-header p{
+  font-size: 4rem;
 }
 h2{
   text-align: center;
@@ -215,15 +219,16 @@ h2{
   bottom: 0;
   left: 50%;
   transform:  translate(-50%);
-  height: 4px;
-  width: 2%;
+  height: 40px;
+  width: 10%;
   background-color: #2ecc71;
 }
 
 .row{
-  display: flex;
   height: 33%;
+  display: flex;
   align-items: center;
+  justify-content: center;
 }
 .skill-container{
   flex-basis: 33%;
