--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', serif;
   font-size: large;
   list-style: none;
 }
@@ -15,10 +15,12 @@ html {
 
 body {
   background-color: rgb(5, 9, 69);
+  justify-content: center;
   align-items: center;
 }
 
 /* Navbar */
+
 #myimg {
   width: 5%;
   height: 6%;
@@ -54,33 +56,32 @@ body {
 }
 
 .navbar li a {
-  text-decoration: none;
-  color: rgb(255, 241, 206);
+  position: relative;
   font-size: 1.8em;
-  transition: 200ms;
-  padding: 1.4vw;
-  transition: 0.3s;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 3vw;
 }
 
-.navbar li a:hover {
-  border: none;
-  color: rgb(255, 102, 102);
-  text-decoration-line: underline;
-  transition: width 1s ease-in-out;
-}
 .navbar li a::after {
-  color: rgb(255, 102, 102);
-  text-decoration-line: underline;
-}
-.navbar a::after {
-  content: "";
+  content: '';
   position: absolute;
-  width: 0;
-  height: 2px;
-  bottom: 0;
-  left: 50%;
-  background-color: white;
-  transition: width 0.3s ease-in-out; /* Animation duration and easing function */
+  left: 0;
+  bottom: -6px;
+  width: 100%;
+  height: 3px;
+  background: rgb(255, 102, 102); 
+  border-radius: 3px; 
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.7s;
+}
+
+
+.navbar li a:hover::after {
+  transform-origin: left;
+  transform: scaleX(1);;
 }
 
 .homenav {
@@ -91,11 +92,12 @@ body {
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: -50;
+  z-index: -20;
 }
 
 /* glitch effect */
 .glitch {
+  margin-right: 40%;
   margin-left: 5%;
   letter-spacing: 0.3%;
   cursor: none;
@@ -107,7 +109,7 @@ body {
 .glitch::before,
 .glitch::after {
   content: "Ansh Shah!";
-  display: block;
+  display: inline-block;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -155,7 +157,7 @@ body {
 .container-anim {
   display: flex;
   width: 100vw;
-  justify-content: flex-start;
+  justify-content: flex-center;
   padding: 0 15px;
   align-items: center;
 }
@@ -261,10 +263,10 @@ h2{
   margin: 0.5rem;
 }
 .skill-img{
-  width: 90px;
-  position: relative;
-  height: 90px;
-  border-radius: 45px;
+  width: 160px;
+  position:sticky;
+  height: 160px;
+  border-radius: 80px;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -274,14 +276,13 @@ h2{
 .skill-img::after{
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
+  margin-right: -5;
   width: 50%;
   height: 50%;
 }
 .skill-icon{
-  width: 50px;
-  z-index: 2;
+  width: 80px;
+  z-index: 0;
 }
 /*Unused right now*/
 .btntop {
@@ -327,4 +328,7 @@ h2{
     padding: 2%;
     margin: 5%;
     margin-top: 0%;
+}
+.contact-form p{
+  padding: 1%;
 }
