--- a/index.css
+++ b/index.css
@@ -310,7 +310,7 @@ h2{
     background-color: rgb(9,12,54);
     color: bisque;
 }
-.contact-h1{
+.sub-header{
     align-content: center;
     padding-top: 4%;
     margin: 5%;
