--- a/index.css
+++ b/index.css
@@ -390,6 +390,12 @@ h2{
   }
 }
 
+.visit{
+  padding-top: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Fade-in animation */
 @keyframes fadeIn {
   from {
