--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ body {
   background-color: rgb(5, 9, 69);
   justify-content: center;
   align-items: center;
+  overflow-y: visible;
+  overflow-x: hidden;
 }
 
 /* Navbar */
@@ -251,6 +253,54 @@ h2{
   margin-left: 2%;
 }
 
+@media (max-width:500px) {
+  .skill-container{
+    flex-basis: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow-x: hidden;
+  }  
+  .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow-x: hidden;
+  }
+  .navbar ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow-x: hidden;
+  }
+  .typing-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 300px;
+  }
+  .row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+  #profile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  img{
+    size: 20%;
+  }
+}
+
 .skill-box{
   padding: 1rem;
   color: #ddd;
@@ -384,9 +434,15 @@ h2{
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 500px) {
   .project {
     width: calc(100% - 40px);
+  }
+  .projects-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
 
@@ -460,4 +516,8 @@ h2{
 }
 .contact-form p{
   padding: 1%;
+}
+
+@media body{
+
 }
