--- a/index.css
+++ b/index.css
@@ -444,8 +444,8 @@ h2{
     width: calc(100% - 40px);
   }
   .projects-container{
-    display: flex;
     flex-basis: 100%;
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
