--- a/index.css
+++ b/index.css
@@ -446,6 +446,7 @@ h2{
   .projects-container{
     flex-basis: 100%;
     display: inline-flex;
+    max-width: min-content;
     flex-direction: column;
     align-items: center;
     justify-content: center;
