--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ body {
   position: fixed;
   align-items: center;
   justify-content: center;
+  background-color: rgb(5, 9, 69);
 }
 .navbar ul {
   display: flex;
